--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-tilt": "^0.1.4",
     "tachyons": "^4.10.0"
   },
+  "devDependencies": {
+  "merge": ">=1.2.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
